--- a/Assignment_2/Assignment_2.Rmd
+++ b/Assignment_2/Assignment_2.Rmd
@@ -20,6 +20,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 library(data.table)
 library(tidyverse)
+library(ggpubr)
+install.packages("ggpubr")
 fn1 <- "chs_individual.csv"
 if (!file.exists(fn1))
   download.file("https://raw.githubusercontent.com/USCbiostats/data-science-data/master/01_chs/chs_individual.csv", destfile=fn1)
@@ -63,6 +65,11 @@ c(names(which(colSums(is.na(dat)) > 0)))
 a.out <- amelia(dat, m = 5, idvars=idvars)
 dat <- a.out$imputations[[1]]
 dat <- data.table(dat)
+
+dat$smoke[dat$smoke < 0.5]  <- 0
+dat$smoke[dat$smoke >=0.5]  <- 1
+dat$gasstove[dat$gasstove < 0.5]  <- 0
+dat$gasstove[dat$gasstove >= 0.5]  <- 1
 ```
 
 # Create cat variable obesity level 
@@ -74,13 +81,181 @@ dat[bmi > 24, obesity_level := "obese"]
 dat[, .(
   min_bmi = min(bmi),
   max_bmi = max(bmi),
-  underweight = dat %>% filter(obesity_level == "underweight") %>% count(),
-  normal = dat %>% filter(obesity_level == "normal") %>% count(),
-  overweight = dat %>% filter(obesity_level == "overweight") %>% count(),
-  obese = dat %>% filter(obesity_level == "obese") %>% count()
-  )] %>%
+  number_obv = .N
+), by = obesity_level] %>%
   knitr::kable()
 
 ```
 
 # Create cat variable smoke_gas_exposure
+```{r}
+dat[smoke ==0 & gasstove ==0, smoke_gas_exposure := "No Exposure"]
+dat[smoke == 1 & gasstove == 0, smoke_gas_exposure := "Smoke Exposure"]
+dat[smoke == 0 & gasstove == 1, smoke_gas_exposure := "Gas Exposure"]
+dat[smoke == 1 & gasstove ==1, smoke_gas_exposure := "Smoke and Gas Exposure"]
+
+
+```
+
+# Create 4 Summary Tables showing average/proportion and SD of "Forced expiratory volume in 1 second (ml)" and asthma indicator by town, sex, obesity level, and “smoke_gas_exposure.”
+```{r}
+dat[, .(
+  FEV_avg=mean(fev, na.rm=TRUE),
+  FEV_sd=sd(fev, na.rm=TRUE),
+  asmtha_avg=mean(asthma, na.rm=TRUE),
+  asmtha_sd=sd(asthma,na.rm=TRUE)
+), by = "townname"] %>%
+  knitr::kable( caption ="AVG and SD of FEV and Asthma by Town")
+
+dat[, .(
+  FEV_avg=mean(fev, na.rm=TRUE),
+  FEV_sd=sd(fev, na.rm=TRUE),
+  asmtha_avg=mean(asthma, na.rm=TRUE),
+  asmtha_sd=sd(asthma,na.rm=TRUE)
+), by = "male"] %>%
+  knitr::kable( caption ="AVG and SD of FEV and Asthma by Sex")
+
+dat[, .(
+  FEV_avg=mean(fev, na.rm=TRUE),
+  FEV_sd=sd(fev, na.rm=TRUE),
+  asmtha_avg=mean(asthma, na.rm=TRUE),
+  asmtha_sd=sd(asthma,na.rm=TRUE)
+), by = "obesity_level"] %>%
+  knitr::kable( caption ="AVG and SD of FEV and Asthma by Obesity Level")
+
+dat[, .(
+  FEV_avg=mean(fev, na.rm=TRUE),
+  FEV_sd=sd(fev, na.rm=TRUE),
+  asmtha_avg=mean(asthma, na.rm=TRUE),
+  asmtha_sd=sd(asthma,na.rm=TRUE)
+), by = "smoke_gas_exposure"] %>%
+  knitr::kable( caption ="AVG and SD of FEV and Asthma by Smoke & Gas Exposure")
+  
+```
+
+# EDA Analysis
+
+## EDA Checklist
+### Checking Dimensions of data
+
+```{r}
+dim(dat)
+```
+### Checking Headers and Footers 
+```{r}
+head(dat)
+tail(dat)
+```
+### Check Variable Names and Variable Types
+```{r}
+str(dat)
+```
+
+### Key Variables
+```{r}
+summary(dat$bmi)
+summary(dat$fev)
+summary(dat$smoke_gas_exposure)
+summary(dat$pm25_mass)
+```
+# Part 1: Facet plot showing scatterplots with regression lines of BMI vs FEV by “townname”.
+```{r}
+dat[!is.na(townname)] %>%
+  ggplot() +
+  geom_point(mapping=aes(x=bmi, y=fev, color=townname)) +
+  geom_smooth(mapping=aes(x=bmi, y=fev, color="white", method="lm")) +
+  facet_wrap(~ townname) +
+  labs(title = "BMI vs FEV by Town Name", x= "BMI", y="FEV")
+```
+The figure above contains a scatter plot that details the relationship between BMI and Forced expiratory volume in 1 second (ml) (FEV) for each town in the data set, with the x-axis being the BMI values and the y-axis being the FEV values. Within each scatter plot lies a regression line. From the figure above, it is evident that across all of the towns, BMI seems to have a positive association with. When comparing the graphs to each other, we see that the \Delta$FEV is greatest in the Upland area and the least in the Alpine area. 
+
+# Part 2: Stacked histograms of FEV by BMI category and FEV by smoke/gas exposure. Use different color schemes than the ggplot default.
+```{r}
+dat[!is.na(fev) & !is.na(obesity_level) & !is.na(smoke_gas_exposure) ] %>%
+  ggplot() +
+  geom_histogram(mapping=aes(x=fev, fill = obesity_level))+
+  labs(title = "FEV by BMI category", x= "FEV", y="Count") +
+  scale_fill_brewer(palette = "Spectral")
+
+dat[!is.na(fev) & !is.na(obesity_level) & !is.na(smoke_gas_exposure) ] %>%
+  ggplot() +
+  geom_histogram(mapping=aes(x=fev, fill = smoke_gas_exposure))+
+  labs(title = "FEV by Smoke/Gas Exposure", x= "FEV", y="Count") +
+  scale_fill_brewer(palette = "Spectral")
+
+```
+Both figures above are stacked histogras that display the distribution of FEV by the BMI categories and the smoke/gas exposure categories.
+The first figure displays the distribution of FEV by BMI categories, with the x-axis being the FEV values and the y-axis being the count. From this stacked histogram, we can see that the normal category is the only obesity level that has a normal distribution. The obesity and overweight categories appear to be left-skewed while the underweight category is right skewed. Moreover, from this plot, we can see that the majority of the data set is made up of individuals with normal BMI, while only a small portion of the dataset are obese, overweight, or underweight. 
+
+The second figure displays the distribution of FEV by smoke/gas exposure categories, with the x-axis being the FEV values and the y-axis being the count. Interestingly enough, it seems that all of the categories for smoke/gas exposure seem to have a normal distribution.Moreoever, the majority of the population of these towns seem to be exposed to only gas, while only a small portion were exposed to only smoke.   
+
+# Part 3: Barchart of BMI by smoke/gas exposure.
+```{r}
+dat[!is.na(obesity_level) & !is.na(smoke_gas_exposure) ] %>%
+  ggplot() +
+  geom_bar(mapping=aes(x=obesity_level, fill = smoke_gas_exposure))+
+  labs(title = "BMI by Smoke/Gas Exposure", x= "Obesity Level", y="Count") +
+  scale_fill_brewer(palette = "Spectral")
+```
+The graph above depicts a bar chart of BMI by smoke/gas exposure, with the x-axis being the Obesity level categories and the y-axis being the count. From the graph, we can see that the majority of each obesity level is made up of individuals exposed to gas only, while a very small portion were exposed to smoke only. Moreover, for each obesity level, the order of the smoke/gas exposure category in terms of count proportion seems to be maintained in this order from largest to smallest: Gas Exposure, No Exposure, Smoke and Gas Exposure, and Smoke Exposure. 
+
+# Part 4: Statistical summary graphs of FEV by BMI and FEV by smoke/gas exposure category.
+```{r}
+dat[!is.na(fev) & !is.na(obesity_level)] %>%
+  ggplot() + 
+    stat_summary(mapping = aes(x = fev, y = obesity_level),
+    fun.min = min,
+    fun.max = max,
+    fun = median)+ 
+  labs(title = " Statistical Summary of FEV by BMI", x= "FEV", y="Obesity Level")
+
+dat[!is.na(fev) & !is.na(smoke_gas_exposure)] %>%
+  ggplot() + 
+    stat_summary(mapping = aes(x = fev, y = smoke_gas_exposure),
+    fun.min = min,
+    fun.max = max,
+    fun = median)+ 
+  labs(title = "Statistical Summary of FEV by Smoke & Gas Exposure", x= "FEV", y="Smoke & Gas Exposure")
+```
+The graphs above depict statistical summary charts of FEV by Obesity Level and FEV by smoke/gas exposure level respectively. 
+
+The first figure displays the statistical summary chart of FEV by Obesity level, with the x-axis being the FEV values and the y-axis being the Obesity level categories. From this graph, we observe that the normal category has the greatest range, while the overweight category has the smallest range. Furthermore, the obese category seems to have the largest median while the underweight category has the smallest median of the categories. 
+
+The second figure displays the statistical summary chart for FEV by smoke/gas exposure level with the x-axis being the FEV values and the y-axis being the smoke/gas exposure level categories. From this graph, we observe that the Gas Exposure category has the largest range, with the No Exposure category having nearly the same range. On the other hand, the Smoke and Gas Exposure category has the smallest range. Moreover, the No Exposure category seems to have the greatest median, while the Gas Exposure and the Smoke and Gas Exposure categories have nearly the same median, with that median being the smallest. Overall,it seems that the medians are nearly the same for all of the categories, with differences between each median for each category being very small. 
+
+
+# Part 5: A leaflet map showing the concentrations of PM2.5 mass in each of the CHS communities.
+```{r}
+library(leaflet)
+
+temp.pal <- colorFactor(palette ='Accent', domain=dat$pm25_mass)
+
+leaflet(dat) %>%
+  addProviderTiles('CartoDB.Positron') %>%
+  addCircles(
+    lat = ~lat, lng=~lon,
+    label = dat$townname, color = ~ temp.pal(pm25_mass),
+    opacity = 1, fillOpacity = 1, radius = 500
+    ) %>%
+  # And a pretty legend
+  addLegend('bottomleft', pal=temp.pal, values=dat$pm25_mass,
+          title='Concentrations of PM2.5 mass in each of the CHS communities', opacity=1)
+```
+
+The graph above is a leaflet graph that maps the concentrations of PM2.5 mass in each of the CHS communities, with the ranking legend displaying the different PM2.5 mass values for each community marked on the map. Each dot on the map corresponds to a CHS town name that is displayed when hoevered over. From the map we can see the that the greatest PM2.5 masses are centered around the Mira Loma, Riverside and Upland communities, with Mira Loma containing the highest PM2.5 mass of 29.97. This seems accurate as this area was riddled with fires in 2018, explaining the high PM2.5 masses. The lowest PM2.5 masses seem to lie in Lompoc community in the Santa Barbara Area. 
+
+
+# Part 6: Choose a visualization to examine whether PM2.5 mass is associated with FEV.
+```{r}
+dat[!is.na(pm25_mass) & !is.na(fev)] %>%
+  ggplot() +
+  geom_point(mapping=aes(x=pm25_mass, y=fev)) +
+  geom_smooth(mapping=aes(x=pm25_mass, y=fev, color="black", method="lm")) +
+  labs(title = "Association Between PM2.5 mass and FEV", x= "PM2.5 Mass", y="FEV")
+ 
+p <- ggscatter(dat, x="pm25_mass", y="fev", add = "reg.line", add.params = list(color="blue", fill="lightgray"), conf.int = TRUE) 
+p + stat_cor(method = "pearson", label.x = 3, label.y = 30)
+
+#cor(dat$pm25_mass,dat$fev)
+```
+From the 1st graph above, it is evident that there is no association bewteem PM2.5 mass and FEV. However, just to confirm that lack of association, I plotted the PM2.5 mass and FEV with a scatterplot that includes the Pearson Correlation Value and the p-value. This 2nd graph further confirms that there is no association bewteen PM2.5 mass and FEV as the Pearson Correlation was `r cor(dat$pm25_mass,dat$fev)`, meaning there is very little correlation or association between the two variables, which is confirmed by the p-value of 0.007 < 0.05, the standard significance level.  
